--- a/eureka_server/src/main/resources/application.yml
+++ b/eureka_server/src/main/resources/application.yml
@@ -1,27 +1,10 @@
----
-spring:
-  profiles: peer1
 server:
   port: 8761
 eureka:
   instance:
     hostname: localhost
   client:
-    serviceUri:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    register-with-eureka: false
-    fetch-registry: false
-
----
-spring:
-  profiles: peer2
-server:
-  port: 8762
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    serviceUri:
+    serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     register-with-eureka: false
     fetch-registry: false
