--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -1,13 +1,25 @@
-#my:
-#  foo: foo version 1
 spring:
   application:
     name: config-client
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
-      uri: http://localhost:8769
       fail-fast: true
-#      discovery:
-#        service-id: config-server
+#      uri: http://localhost:8769
+      discovery:
+        enabled: true
+        service-id: config-server
   profiles:
     active: dev
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+management:
+  security:
+    enabled: false
+
