--- a/eureka_ribbon_client/src/main/resources/application.yml
+++ b/eureka_ribbon_client/src/main/resources/application.yml
@@ -6,4 +6,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaulatZone: http://peer1:8761/eureka,http://peer2:8762/eureka
+      defaulatZone: http://peer1:8761/eureka #,http://peer2:8762/eureka
