--- a/eureka_server/src/main/resources/application.yml
+++ b/eureka_server/src/main/resources/application.yml
@@ -1,10 +1,3 @@
-server:
-  port: 8761
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    register-with-eureka: false
-    fetch-registry: false
+spring:
+  profiles:
+    active: peer2
