--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -13,8 +13,7 @@ spring:
       discovery:
         enabled: true
         service-id: config-server
-  profiles:
-    active: dev
+      profile: dev
 eureka:
   client:
     service-url:
