--- a/eureka_client/src/main/resources/bootstrap.yml
+++ b/eureka_client/src/main/resources/bootstrap.yml
@@ -6,6 +6,6 @@
 #eureka:
 #  client:
 #    serviceUrl:
-#      defaultZone: http://peer1:8761/eureka
+#      defaultZone: http://localhost:8761/eureka
 #
 #
