--- a/eureka_server/src/main/resources/application-peer1.yml
+++ b/eureka_server/src/main/resources/application-peer1.yml
@@ -1,10 +1,10 @@
 spring:
-  profiles: peer1
+  profiles: localhost
 server:
   port: 8761
 eureka:
   instance:
-    hostname: peer1
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
