--- a/eureka_server/src/main/resources/application-peer2.yml
+++ b/eureka_server/src/main/resources/application-peer2.yml
@@ -1,10 +1,10 @@
 spring:
-  profiles: peer2
+  profiles: localhost
 server:
   port: 8762
 eureka:
   instance:
-    hostname: peer2
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
