--- a/nacos-produce/src/main/resources/bootstrap.properties
+++ b/nacos-produce/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 
 spring.application.name=nacos-test
 spring.cloud.nacos.discovery.server-addr=119.3.12.87:8848
+spring.cloud.nacos.config.server-addr=119.3.12.87:8848
 server.port=8090
