--- a/eureka_server/src/main/resources/application-peer1.yml
+++ b/eureka_server/src/main/resources/application-peer1.yml
@@ -8,5 +8,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    register-with-eureka: false
-    fetch-registry: false
+#    register-with-eureka: false
+#    fetch-registry: false
