--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.3.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -45,8 +45,8 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <!--<version>Finchley.RC1</version>-->
-                <version>Dalston.SR1</version>
+                <version>Finchley.SR1</version>
+                <!--<version>Dalston.SR1</version>-->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
