--- a/eureka-feign-client/src/main/resources/application.yml
+++ b/eureka-feign-client/src/main/resources/application.yml
@@ -9,4 +9,5 @@ feign:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka #,http://localhost:8762/eureka
+#      defaultZone: http://localhost:8761/eureka #,http://localhost:8762/eureka
+      defaultZone: http://test:123456@47.111.232.105:8761/eureka/
