--- a/eureka-monitor-client/src/main/resources/application.yml
+++ b/eureka-monitor-client/src/main/resources/application.yml
@@ -7,12 +7,12 @@ security:
     enabled: false
 turbine:
   aggregator:
-    clusterConfig: default   # 指定聚合哪些集群，多个使用","分割，默认为default。可使用http://.../turbine.stream?cluster={clusterConfig之一}访问
-  appConfig: eureka-feign-client,eureka-ribbon-client  # 配置Eureka中的serviceId列表，表明监控哪些服务
+    clusterConfig: default   # ????????些???????????","???????default???????http://.../turbine.stream?cluster={clusterConfig??}????
+  appConfig: eureka-feign-client,eureka-ribbon-client  # ????Eureka?械?serviceId?斜??????????些????
   clusterNameExpression: new String("default")
-  # 1. clusterNameExpression指定集群名称，默认表达式appName；此时：turbine.aggregator.clusterConfig需要配置想要监控的应用名称
-  # 2. 当clusterNameExpression: default时，turbine.aggregator.clusterConfig可以不写，因为默认就是default
-  # 3. 当clusterNameExpression: metadata['cluster']时，假设想要监控的应用配置了eureka.instance.metadata-map.cluster: ABC，则需要配置，同时turbine.aggregator.clusterConfig: ABC
+  # 1. clusterNameExpression?????????????????appName???????turbine.aggregator.clusterConfig?????????????????????
+  # 2. ??clusterNameExpression: default???turbine.aggregator.clusterConfig?????写???????????default
+  # 3. ??clusterNameExpression: metadata['cluster']???????????????????????eureka.instance.metadata-map.cluster: ABC??????????????turbine.aggregator.clusterConfig: ABC
 eureka:
   client:
     serviceUrl:
