--- a/eureka-zuul-client/src/main/resources/application.yml
+++ b/eureka-zuul-client/src/main/resources/application.yml
@@ -1,24 +1,34 @@
 eureka:
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
+#      defaultZone: http://192.168.1.37:8761/eureka #,http://localhost:8762/eureka
+      defaultZone: http://test:123456@47.111.232.105:8761/eureka/
 server:
   port: 7000
 spring:
   application:
-    name: service-zuul
+    name: service-zuul2
 zuul:
   routes:
-    hiapi:
-      path: /hiapi/**
-      serviceId: eureka-client
+    projectapi:
+      path: /ssm/**
+      serviceId: project-manager
     ribbonapi:
-      path: /ribbonapi/**
-      serviceId: eureka-ribbon-client
+      path: /uic/**
+      serviceId: smart-user
     feignapi:
-      path: /feignapi/**
+      path: /feign/**
       serviceId: eureka-feign-client
-  prefix: /V1
+    userapi:
+      path: /organization/**
+      serviceId: organization
+    user2api:
+      path: /organization2/**
+      serviceId: organization2
+#  prefix: /V1
 
 
 
