--- a/eureka_client/src/main/resources/application.yml
+++ b/eureka_client/src/main/resources/application.yml
@@ -6,4 +6,5 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
+#      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
+      defaultZone: http://test:123456@47.111.232.105:8761/eureka/
