--- a/eureka_server/pom.xml
+++ b/eureka_server/pom.xml
@@ -31,6 +31,7 @@
 	</properties>
 
 	<build>
+		<finalName>eureka_server</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
