--- a/eureka-zuul-client/pom.xml
+++ b/eureka-zuul-client/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>eureka-zuul-client</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>zuul</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>eureka-zuul-client</name>
