--- a/nacos-produce/src/main/resources/bootstrap.properties
+++ b/nacos-produce/src/main/resources/bootstrap.properties
@@ -3,3 +3,4 @@ spring.application.name=nacos-test
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 server.port=8090
+logging.pattern.console='%d - %p %c{1}:%L %m%n'
