--- a/nacos-consume/src/main/resources/application.properties
+++ b/nacos-consume/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
 spring.application.name=nacos-consume
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+logging.pattern.console='%d - %p %c{1}:%L %m%n'
 
