--- a/oauth-server/src/main/resources/application.yml
+++ b/oauth-server/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     database: 2
     host: localhost
     port: 6379
-    password: '@after'
+#    password: '@after'
     jedis:
       pool:
         max-active: 8
