--- a/oauth-client-code/src/main/resources/application.yml
+++ b/oauth-client-code/src/main/resources/application.yml
@@ -2,10 +2,8 @@ spring:
   application:
     name: client-authcode
   redis:
-    database: 2
     host: localhost
     port: 6379
-    password: '@after'
     jedis:
       pool:
         max-active: 8
@@ -16,13 +14,11 @@ server:
   port: 6102
   servlet:
     context-path: /client-authcode
-
-
 security:
   oauth2:
     client:
-      client-id: code-client
-      client-secret: code-secret-8888
+      client-id: order-client
+      client-secret: order-secret-8888
       user-authorization-uri: http://localhost:6001/oauth/authorize
       access-token-uri: http://localhost:6001/oauth/token
     resource:
