--- a/oauth-client-user/src/main/resources/application.yml
+++ b/oauth-client-user/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     database: 2
     host: localhost
     port: 6379
-    password: '@after'
+#    password: '@after'
     jedis:
       pool:
         max-active: 8
@@ -24,12 +24,11 @@ security:
       client-secret: user-secret-8888
       user-authorization-uri: http://localhost:6001/oauth/authorize
       access-token-uri: http://localhost:6001/oauth/token
-#    resource:
-#      id: user-client
-#      user-info-uri: user-info
-#    authorization:
-#      check-token-access: http://localhost:6001/oauth/check_token
     resource:
       jwt:
         key-uri: http://localhost:6001/oauth/token_key
         key-value: dev
+      id: user-client
+      user-info-uri: user-info
+    authorization:
+      check-token-access: http://localhost:6001/oauth/check_token
