--- a/oauth-server/src/main/resources/application.yml
+++ b/oauth-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: auth-server
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_cloud?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: root
     hikari:
