--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 
-#log¥Ú”°∏Ò Ω
+#log
 logging:
   pattern:
     console: '%d - %p %c:%L %m%n'
 spring:
   profiles:
-    active: demo
+    active: dev
